--- a/serverless.yml
+++ b/serverless.yml
@@ -70,7 +70,15 @@ functions:
           path: todos/{id}
           method: delete
           cors: true
-
+          
+   newfunction:
+    handler: todos/newfunction
+    event:
+        -http:
+            path: todos/{id}
+            method: get
+            cors: true
+            
 resources:
   Resources:
     TodosDynamoDbTable:
