--- a/serverless.yml
+++ b/serverless.yml
@@ -71,13 +71,13 @@ functions:
           method: delete
           cors: true
           
-   newfunction:
-    handler: todos/newfunction
-    event:
-        -http:
-            path: todos/{id}
-            method: get
-            cors: true
+   newfunctionget:
+        handler: todos/newfunction
+        event:
+            -http:
+                path: todos/{id}
+                method: get
+                cors: true
             
 resources:
   Resources:
